View Issue Details

IDProjectCategoryView StatusLast Update
0031056Open CASCADEOCCT:Samplespublic2020-12-02 17:12
Reporterkgv Assigned Toapn  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version7.5.0Fixed in Version7.5.0 
Summary0031056: Samples - update glfw sample to use AIS_ViewController
DescriptionIt is desired updating glfw sample to use AIS_ViewController for camera manipulations.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0030507 closedbugmaster Open CASCADE Visualization - introduce AIS_ViewController 
child of 0030429 closedbugmaster Community Samples - add simple glfw 3D Viewer sample 

Activities

git

2019-10-10 17:11

administrator   ~0088022

Branch CR31056 has been created by kgv.

SHA-1: bd76641c52fd360413a426d89c099bb657f007cd


Detailed log of new commits:

Author: kgv
Date: Thu Oct 10 17:09:07 2019 +0300

    0031056: Samples - update glfw sample to use AIS_ViewController

kgv

2019-10-10 17:11

developer   ~0088023

Please raise the patch.

git

2019-10-23 11:51

administrator   ~0088486

Branch CR31056 has been deleted by kgv.

SHA-1: bd76641c52fd360413a426d89c099bb657f007cd

Related Changesets

occt: master 3818aaca

2019-10-10 14:09:07

kgv


Committer: apn Details Diff
0031056: Samples - update glfw sample to use AIS_ViewController Affected Issues
0031056
mod - samples/glfw/GlfwOcctView.cpp Diff File
mod - samples/glfw/GlfwOcctView.h Diff File

Issue History

Date Modified Username Field Change
2019-10-10 17:08 kgv New Issue
2019-10-10 17:08 kgv Assigned To => kgv
2019-10-10 17:11 git Note Added: 0088022
2019-10-10 17:11 kgv Note Added: 0088023
2019-10-10 17:11 kgv Assigned To kgv => bugmaster
2019-10-10 17:11 kgv Status new => resolved
2019-10-10 17:12 kgv Status resolved => reviewed
2019-10-10 17:12 kgv Relationship added child of 0030507
2019-10-10 17:14 kgv Relationship added child of 0030429
2019-10-23 01:07 apn Changeset attached => occt master 3818aaca
2019-10-23 01:07 apn Assigned To bugmaster => apn
2019-10-23 01:07 apn Status reviewed => verified
2019-10-23 01:07 apn Resolution open => fixed
2019-10-23 11:51 git Note Added: 0088486
2019-10-23 16:53 apn Test case number => Not needed
2020-12-02 16:40 emo Fixed in Version => 7.5.0
2020-12-02 17:12 emo Status verified => closed