0031056: Samples - update glfw sample to use AIS_ViewController